--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "minixt",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "A tiny fork of Quxt with zero dependencies",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "scripts": {
+    "prepack": "rm -f dist/* index.d.ts && tsup src/index.ts --format esm,cjs --target node8 --no-shims --dts && ln dist/index.d.ts ."
+  },
   "files": [
     "dist/",
     "README.md",
