--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "minixt",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A tiny fork of Quxt with zero dependencies",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
-    "prepack": "rm -f dist/* index.d.ts && tsup src/index.ts --format esm,cjs --target node8 --no-shims --dts && ln dist/index.d.ts ."
+    "prepack": "rm -rf dist/ index.d.ts && tsup src/index.ts --format esm,cjs --target node8 --no-shims --dts && ln dist/index.d.ts ."
   },
   "files": [
     "dist/",
@@ -32,10 +32,13 @@
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "benny": "^3.7.1",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "ts-node": "^10.7.0",
+    "tsd": "^0.20.0"
   }
 }
